syntax = "proto3";

package services;
option go_package = "server/generated/services";

import "messages.proto";


service WebAppService {
    rpc Auth (messages.AuthRequest) returns (messages.AuthResponse) {}
    rpc SignIn (messages.SignInRequest) returns (messages.AuthResponse) {}
    rpc SignUp (messages.SignUpRequest) returns (messages.AuthResponse) {}
    rpc SignOut (messages.SignOutRequest) returns (messages.AuthResponse) {}
    rpc User (messages.UserRequest) returns (messages.UserResponse) {}

    rpc Stores (messages.StoresRequest) returns (messages.StoresResponse) {}
    rpc Store (messages.StoreRequest) returns (messages.StoreResponse) {}
    rpc Product (messages.ProductRequest) returns (messages.ProductResponse) {}
    rpc ClearingHistory (messages.ClearingHistoryRequest) returns (messages.ClearingHistoryResponse) {}
    rpc StorePlace (messages.StorePlaceRequest) returns (messages.StorePlaceResponse) {}
}
